# fedsnr

./: .gitignore  README.md  pyproject.toml  requirements.txt  test-distribution.ipynb  test_exec.sh  tests.ipynb
fedmriapp/: client_app.py  fl_config.json  noise.py  partition.ipynb  server_app.back.py  server_app.py
fedmriapp/client/: client.py  client_config.json
fedmriapp/models/: model_config.json  models.py
fedmriapp/mristrategy/: average.bk.py  average.py  fed_mri.py  snr_cnr.py
fedmriapp/reproducibility/: reproducible_strategy.py
fedmriapp/results/: rename.ipynb
fedmriapp/results/alzheimer-dataset copy/: FedAvg-C0.1-partClients20-dist-dirichlet-perc-0.0.csv  FedAvg-C0.1-partClients20-dist-dirichlet-perc-0.5.csv  FedAvg-C0.1-partClients20-dist-iid-perc-0.2.csv  FedAvg-C0.1-partClients20-dist-iid-perc-0.5.csv  FedAvg-C0.3-partClients20-dist-dirichlet-perc-0.0.csv  FedAvg-C0.3-partClients20-dist-dirichlet-perc-0.2.csv  FedAvg-C0.3-partClients20-dist-iid-perc-0.2.csv  FedAvg-C0.3-partClients20-dist-iid-perc-0.5.csv  FedAvg-C0.5-partClients20-dist-dirichlet-perc-0.0.csv  FedAvg-C0.5-partClients20-dist-dirichlet-perc-0.2.csv  FedAvg-C0.5-partClients20-dist-iid-perc-0.2.csv  FedAvg-C0.7-partClients20-dist-dirichlet-perc-0.0.csv  FedAvg-C0.7-partClients20-dist-iid-perc-0.2.csv  FedMRI-C0.1-partClients20-dist-dirichlet-perc-0.0.csv  FedMRI-C0.1-partClients20-dist-dirichlet-perc-0.5.csv  FedMRI-C0.1-partClients20-dist-iid-perc-0.0.csv  (+15 more)
test-reproduction/: partition-generator.py  script_tuning.py  server-partition.py  test_exec.sh
(+274 files in other folders)
